--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-cloudflare": "^4.2.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "prettier": "^3.1.1",
@@ -21,8 +22,8 @@
   },
   "type": "module",
   "dependencies": {
-    "three": "^0.159.0",
     "@threlte/core": "^7.3.0",
-    "@threlte/extras": "^8.11.2"
+    "@threlte/extras": "^8.11.2",
+    "three": "^0.159.0"
   }
 }
