--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
-  "name": "jet",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "prettier --check .",
-    "format": "prettier --write .",
-    "model-pipeline:run": "node scripts/model-pipeline.js"
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/adapter-cloudflare": "^4.2.1",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
-    "svelte": "^4.2.7",
-    "vite": "^5.0.3"
-  },
-  "type": "module",
-  "dependencies": {
-    "@threlte/core": "^7.3.0",
-    "@threlte/extras": "^8.11.2",
-    "three": "^0.159.0"
-  }
+	"name": "jet",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"lint": "prettier --check .",
+		"format": "prettier --write .",
+		"model-pipeline:run": "node scripts/model-pipeline.js"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-cloudflare": "^4.2.1",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"autoprefixer": "^10.4.16",
+		"postcss": "^8.4.32",
+		"postcss-load-config": "^5.0.2",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-tailwindcss": "^0.5.9",
+		"svelte": "^4.2.7",
+		"tailwindcss": "^3.3.6",
+		"vite": "^5.0.3"
+	},
+	"type": "module",
+	"dependencies": {
+		"@threlte/core": "^7.3.0",
+		"@threlte/extras": "^8.11.2",
+		"three": "^0.159.0"
+	}
 }
